--- a/veganza/templates/index.html
+++ b/veganza/templates/index.html
@@ -166,7 +166,7 @@
         box-shadow: 0px 0px 120px -55px rgba(255, 51, 0, 0.5); }
     
     .bright_back {
-      background: url("https://image.shutterstock.com/image-vector/realistic-cinema-advertising-poster-popcorn-260nw-1411840919.jpg"); }
+      background: url("https://dailytimesblog.com/wp-content/uploads/2021/10/902-2.jpg"); }
     
     #tomb {
       box-shadow: 0px 0px 150px -45px rgba(19, 160, 134, 0.6); }
