--- a/veganza/templates/index.html
+++ b/veganza/templates/index.html
@@ -201,7 +201,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Recomdations <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/recommend">Recomdations <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/watch">My List</a>
