--- a/veganza/templates/recommend.html
+++ b/veganza/templates/recommend.html
@@ -261,7 +261,7 @@
             <h4>{{movie.year}}, {{movie.director}}</h4>
             <span class="minutes">{{movie.runtimes}}</span>
             <p class="type">Category: {{movie.category}}</p>
-            <p class="type">Synopsis: {{movie.synopsis}}</p>
+            <p class="type">Presented By: {{movie.studio}}</p>
           </div>
         </div>
         <div class="blur_back bright_back"></div>
