--- a/veganza/templates/dislike.html
+++ b/veganza/templates/dislike.html
@@ -165,7 +165,7 @@
         box-shadow: 0px 0px 120px -55px rgba(255, 51, 0, 0.5); }
     
     .bright_back {
-      background: url("https://image.shutterstock.com/image-vector/realistic-cinema-advertising-poster-popcorn-260nw-1411840919.jpg"); }
+      background: url("https://dailytimesblog.com/wp-content/uploads/2021/10/902-2.jpg"); }
     
     #tomb {
       box-shadow: 0px 0px 150px -45px rgba(19, 160, 134, 0.6); }
@@ -254,7 +254,7 @@
             <h4>{{movie.year}}, {{movie.director}}</h4>
             <span class="minutes">{{movie.runtimes}}</span>
             <p class="type">Category: {{movie.category}}</p>
-            <p class="type">Synopsis: {{movie.synopsis}}</p>
+            <p class="type">Presented By: {{movie.studio}}</p>
           </div>
         </div>
         <div class="blur_back bright_back"></div>
