--- a/veganza/templates/index.html
+++ b/veganza/templates/index.html
@@ -258,10 +258,10 @@
             </p>
             <img class="locandina" src="/media/{{movie.poster}}"/>
             <h1>{{movie.name}}</h1>
-            <h4>{{movie.year}}, {{movie.director}}</h4>
+            <h4>{{movie.year}}, Directed by: {{movie.director}}</h4>
             <span class="minutes">{{movie.runtimes}}</span>
             <p class="type">Category: {{movie.category}}</p>
-            <p class="type">Synopsis: {{movie.synopsis}}</p>
+            <p class="type">Presented By: {{movie.studio}}</p>
           </div>
         </div>
         <div class="blur_back bright_back"></div>
