Ai search parameter improved v3.2.1-Beta

--- a/veganza/templates/recommend.html
+++ b/veganza/templates/recommend.html
@@ -258,7 +258,7 @@
             </p>
             <img class="locandina" src="/media/{{movie.poster}}"/>
             <h1>{{movie.name}}</h1>
-            <h4>{{movie.year}}, {{movie.director}}</h4>
+            <h4>{{movie.year}}, Directed By: {{movie.director}}</h4>
             <span class="minutes">{{movie.runtimes}}</span>
             <p class="type">Category: {{movie.category}}</p>
             <p class="type">Presented By: {{movie.studio}}</p>
