Bug fixed v3.3-Beta-final

--- a/veganza/templates/movie.html
+++ b/veganza/templates/movie.html
@@ -274,6 +274,7 @@ a[data-tooltip][data-placement="top"]::after {
     </div>
     </div>
   </nav>
+  <marquee behavior="alternate" direction="left"><p style="color:floralwhite;"><font size="5px"><span style="color:red;">Notice: </span>Please stay here for <b>more than 3 seconds</b> to get similar content</marquee></p>
     <div class="movie-card">
   
         <div class="container">
